@@ -45,6 +45,7 @@ Document
 Container/Image/SCM/Signature
 - CONTAINER_ADAPTER_V1
 - CONTAINER_OCI_LAYOUT
+- CONTAINER_INDEX_INVALID
 - CONTAINER_TARBALL_SCAN
 - CONTAINER_SBOM_PRESENT
 - CONTAINER_SBOM_INVALID
