@@ -679,6 +679,19 @@ const run = (): void => {
 
   {
     const tmp = mkTmp();
+    const ociDir = path.join(tmp, "oci_layout_bad_index");
+    fs.mkdirSync(path.join(ociDir, "blobs", "sha256"), { recursive: true });
+    fs.writeFileSync(path.join(ociDir, "oci-layout"), "{\"imageLayoutVersion\":\"1.0.0\"}\n", "utf8");
+    fs.writeFileSync(path.join(ociDir, "index.json"), "{ invalid-json", "utf8");
+    fs.writeFileSync(path.join(ociDir, "blobs", "sha256", "a"), "x", "utf8");
+    const capture = captureTreeV0(ociDir, limits);
+    const res = runArtifactAdapterV1({ selection: "container", enabledPlugins: [], inputPath: ociDir, capture });
+    assert(!res.ok, "container adapter should fail closed for invalid explicit OCI index.json");
+    assertEq(res.failCode, "CONTAINER_INDEX_INVALID", "expected CONTAINER_INDEX_INVALID for invalid OCI index");
+  }
+
+  {
+    const tmp = mkTmp();
     const tarPath = path.join(tmp, "container.tar");
     writeSimpleTar(tarPath, [
       { name: "manifest.json", text: "[]" },
